Se agrego el archivo vercel y se modifico la URI

--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 PORT=8080
 
-URI_MONGO=mongodb://localhost:27017/blog
+#URI_MONGO=mongodb://localhost:27017/blog
+
+URI_MONGO=mongodb+srv://sebastiani55533:holaMundo@cluster0.csrznal.mongodb.net/blog?retryWrites=true&w=majority&appName=Cluster0
 
 TOKEN_KEY=w4rt1k3y
