--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
     "joi": "^17.13.1",
+    "mongodb": "^6.7.0",
     "mongoose": "^8.3.4",
     "morgan": "^1.10.0"
   },
@@ -29,4 +30,3 @@
     "nodemon": "^3.1.0"
   }
 }
-
